Correct Verticle Alignment and Spacing
Updated body element height and main container flex gap

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@
     font-family: var(--body-font);
     font-size: 18px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    height: 100vh;
   }
   
   #palindrome-check,
@@ -29,7 +29,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 5px; 
+    gap: 15px; 
   }
   
   .freecodecamp-logo {
